--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -9,14 +11,18 @@
     --back-color: #4F4F8C;
     --text-color: #FFF;
     --btn-color: #37AF65;
+    --font-family: 'Poppins', sans-serif;
 }
 
 html {
-    min-height: 5000px;
+    min-height: 500em;
 }
 
 body {
-    background-color: #FFF;
+    background-color: var(--back-color);
+    color: var(--text-color);
+    font-family: var(--font-family);
+    font-weight: 300;
 }
 
 #header {
@@ -76,19 +82,49 @@ body {
     transform: scale(3);
     align-self: center;
     justify-self: center;
+    cursor: pointer;
 }
 
 .title {
     color: var(--text-color);
     font-size: 2em;
+    font-weight: 500;
     grid-column: 2 / 3;
     align-self: center;
     justify-self: center;
     display: none;
+    cursor: pointer;
 }
 
-#main-content {
-    margin-top: 200px;
+#content {
+    margin-top: 12em;
+    display: grid;
+    gap: 3em;
+}
+
+#get-started {
+    border: 1px solid white;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+#get-started h1 {
+    font-weight: 700;
+}
+
+#get-started #form {
+    border: 1px solid red;
+    min-width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
+
+#get-started #form #submit {
+    min-width: 50%;
+    border: 1px solid blue;
+    align-self: center;
 }
 
 @media (min-width: 400px) {
@@ -100,6 +136,7 @@ body {
 
     #header .title {
         display: block;
+        font-size: 1.6em;
     }
 }
 
@@ -127,10 +164,14 @@ body {
     #header .nav-link:nth-child(2) {
         min-width: 8em;
     }
+
+    #content {
+        margin-top: 8em;
+    }
 }
 
 
-@media (min-width: 850px) {
+@media (min-width: 700px) {
     #header .container-logo{
         justify-self: start;
         margin-left: 10%;
