--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,700&display=swap');
 
 * {
     margin: 0;
@@ -9,23 +10,26 @@
 :root {
     --back-header-color: #1a1a30;
     --background-color: #FFF;
-    --card-color: #6a6abe;
+    --card-color1: #1a1a30;
+    --card-color2: #8f4caa;
     --text-color: #FFF;
     --box-shadow: #7663b2;
     --content-color: #000;
     --btn-color: #37AF65;
     --font-family: 'Poppinsi', sans-serif;
+    --second-font-family: 'Raleway', sans-serif;
 }
 
 html {
     min-height: 500em;
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: var(--font-family);
-    font-weight: 300;
+    font-family: var(--second-font-family);
+    font-weight: 500;
 }
 
 #header {
@@ -115,19 +119,24 @@ body {
 }
 
 #get-started {
-    background: linear-gradient(var(--back-header-color), var(--card-color));
+    max-width: 95%;
+    background: linear-gradient(150deg, var(--card-color1), var(--card-color2));
     padding: clamp(.7rem, 5vw, 3rem);
+    border-radius: .5em;
+    box-shadow: 0 0 5px 2px gray;
     text-align: center;
     font-weight: 700;
+    justify-self: center;
     display: flex;
     flex-flow: column;
-    gap: .5em;
+    gap: 3em;
     align-items: center;
 }
 
 #get-started h1 {
-    font-size: clamp(2em, 3vw, 3em);
+    font-size: clamp(1.5em, 2.5vw, 2em);
     font-weight: 700;
+    font-style: italic;
 }
 
 #get-started #form {
@@ -142,9 +151,9 @@ body {
     border: none;
     border-radius: .7em;
     box-shadow: 0px 0px 20px 1px var(--text-color);
-    padding: .6em;
-    font-family: var(--font-family);
-    font-size: clamp(.8em, 1vw, 2em);
+    padding: .6em .6em .6em 1em;
+    font-family: var(--second-font-family);
+    font-size: clamp(.8em, 2vw, 1em);
     font-weight: 700;
 }
 
@@ -154,7 +163,7 @@ body {
     border: none;
     border-radius: .5em;
     padding: 1em;
-    font-family: var(--font-family);
+    font-family: var(--second-font-family);
     font-weight: 700;
     align-self: center;
     transition: 250ms;
@@ -170,13 +179,17 @@ body {
     min-width: 10em;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
     justify-self: center;
-    gap: 50px;
+    gap: 1.5em;
 }
 
-#products .materials, .shipping, .assurance {
+#products .materials, .shipping, .assurance, .book {
     /* border: 1px solid red; */
-    background: linear-gradient(var(--back-header-color), var(--card-color));
+    max-width: 95%;
+    background: linear-gradient(150deg, var(--card-color1), var(--card-color2));
+    border-radius: .5em;
+    box-shadow: 0 0 5px 2px gray;
     position: relative;
     display: grid;
     grid-template-rows: auto 1fr;
@@ -218,15 +231,15 @@ body {
 }
 
 #products #truck {
-    fill: #0cbfe9;
+    fill: #6495ed;
 }
 
 #products #certification {
-    fill: gold
+    fill: gold;
 }
 
 #products #book {
-    fill : #ff0800;
+    fill : #933709;
 }
 
 #products p {
@@ -234,7 +247,48 @@ body {
     font-size: clamp(1.1em, 2vw, 1.5em);
     text-align: justify;
     padding: .7em 1.5em 1.5em 1.5em;
+}
 
+#video-section {
+    min-width: 70%;
+    max-width: 95%;
+    min-height: 10em;
+    border: 1px solid black;
+    border-radius: .2em;
+    padding: .5em;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+    color: #000;
+}
+
+#video-section h3 {
+    background: linear-gradient(150deg, var(--card-color1), var(--card-color2));
+    border-radius: .5em;
+    padding: .5em;
+    color: var(--text-color);
+    padding: .5em;
+    text-align: justify;
+}
+
+#video-section .video-container {
+    min-width: 95%;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 60%;
+    align-self: center;
+}
+
+#video-section .video-container #video {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%;
 }
 
 @media (min-width: 400px) {
@@ -254,7 +308,6 @@ body {
     #get-started {
         min-width: 31em;
         justify-self: center;
-        border-radius: 10px;
     }
 
     #get-started #form #email {
@@ -262,9 +315,23 @@ body {
     }
 }
 
+@media (min-width: 700px) {
+    #header .container-logo{
+        justify-self: start;
+        margin-left: 10%;
+    }
+
+    #products {
+        padding: 2em;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1em 1px;
+    }
+}
+
 @media (min-width: 740px) {
     #header {
-        grid-template-columns: 2fr auto;
+        grid-template-columns: 1fr 2fr;
         min-height: 6em;
     }
 
@@ -292,26 +359,9 @@ body {
     }
 }
 
-
-@media (min-width: 700px) {
-    #header .container-logo{
-        justify-self: start;
-        margin-left: 10%;
-    }
-}
-
-@media (min-width: 700px) {
-    #products {
-        padding: 2em;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2em;
-    }
-
-    #products .materials,
-              .shipping,
-              .assurance{
-                  border-radius: .5em;
+@media (min-width: 1200px) {
+    #video-section {
+        min-width: 53em;
     }
 }
 
@@ -320,4 +370,4 @@ body {
         grid-template-rows: repeat(1, 1fr);
         grid-template-columns: repeat(4, 1fr);
     }
-}
+}   
