--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@
 }
 
 html {
-    min-height: 500em;
+    /* min-height: 500em; */
     scroll-behavior: smooth;
+    user-select: none;
 }
 
 body {
@@ -53,6 +54,7 @@ body {
 
 #header #nav-bar {
     display: flex;
+    /* display: none; */
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -302,6 +304,7 @@ body {
 #pricing {
     max-width: 95%;
     padding: .5em;
+    margin-bottom: 3em;
     justify-self: center;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -367,11 +370,11 @@ body {
 }
 
 #pricing p {
-    padding: .8em;
+    padding: .6em 2em;
     line-height: 1.7em;
     font-weight: 700;
     text-align: justify;
-    align-self: center;
+    align-self: start;
 }
 
 #pricing .btn-container {
@@ -401,6 +404,67 @@ body {
 #pricing .btn-container .btn-select:hover {
     background: var(--btn-color);
     color: var(--text-color);
+}
+
+#footer {
+    min-height: 15em;
+    background: var(--back-header-color);
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+
+#footer .icons {
+    display: inherit;
+    justify-content: center;
+    gap: 3em;
+}
+
+#footer .icons .icon {
+    fill: #fff;
+    transform: scale(2);
+    transition: 250ms;
+}
+
+#footer .icons .icon:hover {
+    fill: var(--btn-color);
+    transform: scale(2.2);
+}
+
+#footer .text {
+    display: inherit;
+    flex-flow: column;
+    gap: .2em;
+}
+
+#footer .text .info {
+    color: #ccc;
+    min-width: 50%;
+    display: inherit;
+    justify-content: center;
+    gap: .2em;
+}
+
+#footer .text .use {
+    color: #ccc;
+    display: inherit;
+    justify-content: center;
+    gap: .5em;
+}
+
+#footer .text .copyright {
+    color: #333;
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    gap: .2em;
+}
+
+#footer .text .copyright-icon {
+    fill: #333;
 }
 
 @media (min-width: 400px) {
